# nlm-ckn-schema

./: .gitignore  Makefile  README.md  ckn-schema.yaml  merge_schema.py  pyproject.toml  validate_artifacts.py
.github/: pull.yml  pull_request_template.md
.github/workflows/: generate.yml  promote-to-upstream.yml  publish.yml  validate.yml
src/ckn_schema/jsonschema/: ckn_schema.json
src/ckn_schema/pydantic/: ckn_schema.py
src/ckn_schema/schema/: ckn_schema.yaml
src/ckn_schema/shacl/: ckn_schema.shacl.ttl
