[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ckn-schema"
dynamic = ["version"]
description = "LinkML data model for cell phenotypes and biological entities."
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "linkml-runtime>=1.9,<2",
]

[project.optional-dependencies]
dev = [
    "linkml>=1.8,<2",
    "jsonschema",
    "rdflib",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.publish.index.repos.github-publish]
url = "https://upload.pkg.github.com/orgs/NIH-NLM/packages/pypi/ckn-schema/"

[tool.hatch.build.targets.wheel]
packages = ["src/ckn_schema"]
artifacts = [
  "src/ckn_schema/schema/ckn_schema.yaml",
  "src/ckn_schema/shacl/ckn_schema.shacl.ttl",
  "src/ckn_schema/jsonschema/ckn_schema.json",
]
